# summo

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml  publish.yml
src/summo/: __init__.py  summary.py
tests/: test_summary.py
