[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "summo"
version = "0.0.4"
description = ""
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT License" }
authors = [{ name = "Rafael Sanabria", email = "rafael.d.sanabria@gmail.com" }]
dependencies = ["pandas >= 2.0.0"]
classifiers = []

# consider including tox, build, twine
[project.optional-dependencies]
dev = ["pytest >= 7.3", "black >= 23.3.0", "ruff>=0.0.275"]
typing = ["pandas-stubs > 2.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 100

[tool.ruff]
ignore = [
  "E501", # line too long, handled by black
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
strict = true

[tool.tox]
legacy_tox_ini = """
  [tox]
  min_version = 4.0
  env_list = format, linter, type, py39, py310, py311

  [testenv]
  deps = 
    pytest >= 7.3
  commands = pytest

  [testenv:format]
  skip_install = true
  deps =
    black >= 23.0
  commands = black {posargs: src tests}

  [testenv:linter]
  skip_install = true
  deps = 
    ruff >= 0.0.275
  commands = ruff check .

  [testenv:type]
  deps =
    mypy>=1.3
    .[typing]
  commands = mypy {posargs:src}
"""
