[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "summo"
dynamic = ["version"]
description = "Describe in detail a pandas DataFrame"
keywords = ["dataframe", "describe", "statistics"]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT License" }
authors = [{ name = "Rafael Sanabria", email = "rafael.d.sanabria@gmail.com" }]
dependencies = ["pandas >= 2.0.0"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering"
]

[project.urls]
repository = "https://github.com/rfsan/summo"

# consider including tox, build, twine
[project.optional-dependencies]
dev = ["pytest >= 7.3", "black >= 23.3.0", "ruff>=0.0.275"]
tests = ["pytest >= 7.3", "deepdiff >= 6.3.1"]
typing = ["pandas-stubs > 2.0.0"]

[tool.setuptools.dynamic]
version = {attr = "summo.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 100

[tool.ruff]
ignore = [
  "E501", # line too long, handled by black
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
strict = true

[tool.tox]
legacy_tox_ini = """
  [tox]
  min_version = 4.0
  env_list = format, linter, type, py39, py310, py311

  [testenv]
  deps = 
    .[tests]
  commands = pytest

  [testenv:format]
  skip_install = true
  deps =
    black >= 23.0
  commands = black {posargs: src tests}

  [testenv:linter]
  skip_install = true
  deps = 
    ruff >= 0.0.275
  commands = ruff check .

  [testenv:type]
  deps =
    mypy>=1.3
    .[typing]
  commands = mypy {posargs:src}
"""
